--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.9.2",
-    "gsap": "^3.13.0",
-    "tailwindcss": "^4.1.8"
+    "gsap": "^3.13.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10"
   }
 }
