--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.9.2",
-    "gsap": "^3.13.0"
+    "gsap": "^3.13.0",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
